# etl-pipeline-example

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: python-build.yml
src/etl_pipeline_example/: __main__.py  create_dataset.py  log_utils.py  pipeline.py
tests/: conftest.py
tests/__files/: expected_companies.csv  expected_results_small.csv  expected_returns.csv
tests/integration/: test_pipeline.py
tests/unit/: test_create_dataset.py  test_log_utils.py  test_resample_companies.py  test_rolling_corr.py
